# object_detection_in_cpp

./: .gitignore  CMakeLists.txt  README.md  io_tensors.cpp  main.cpp  minimal.cpp  tensorflow-lite_64.deb  videothread.cpp
tflite-dist/include/flatbuffers/_virtual_includes/flatbuffers/flatbuffers/: array.h  default_allocator.h  flexbuffers.h  hash.h  idl.h  minireflect.h  reflection_generated.h  struct.h  util.h  vector.h  verifier.h
tflite-dist/include/flatbuffers/_virtual_includes/runtime_cc/flatbuffers/: allocator.h  flatbuffer_builder.h  stl_emulation.h  vector_downward.h
tflite-dist/include/flatbuffers/src/: libflatbuffers.pic.a-2.params
tflite-dist/include/flatbuffers/src/_objs/flatbuffers/: code_generators.pic.d  idl_gen_fbs.pic.d  idl_gen_text.pic.d  idl_parser.pic.d  reflection.pic.d  util.pic.d
tflite-dist/include/flatbuffers/src/_virtual_includes/flatbuffers/flatbuffers/: base.h  bfbs_generator.h  buffer.h  buffer_ref.h  code_generators.h  detached_buffer.h  flatbuffers.h  reflection.h  registry.h  string.h  table.h
tflite-dist/include/opencv2/: cvconfig.h
tflite-dist/lib/: libopencv_highgui.so.4.7.0  libtensorflowlite.so-2.params  libtensorflowlite.so.runfiles_manifest
tflite-dist/lib/cmake/opencv4/: OpenCVModules-debug.cmake  OpenCVModules.cmake
